# TiebaScraper

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
docs/: explain.md  note.md  scrape_config.md  test_thread.json  tieba_data_notes.md  tieba_error_desc.md  注意事项.md
docs/SQL/: DDL.sql
references/SQL/: DDL.sql
src/: cli_entry.py  container.py  initial_checks.py  main.py  scrape.py  scrape_config.py  scrape_update.py  tieba_auth.py  tieba_property.py
src/api/: aiotieba_client.py  n0099_tbm_v1.py  tieba_api.py
src/config/: constant_config.py  path_config.py  scraper_config.py
src/container/: container.py
src/dao/: post_dao.py  tieba_origin_src_dao.py  user_dao.py
src/db/: content_db.py  post_dao.py  scrape_batch_dao.py  tieba_origin_src_dao.py  user_dao.py
src/entity/: post_entity.py  tieba_origin_src_entity.py  user_entity.py
src/modules/: scape_author_all.py  scrape_module.py  scrape_update_module.py
src/net/: aiotieba_client.py  n0099_tbm_v1.py
src/pojo/: content_frag.py  enums.py  forum_info.py  post_entity.py  producer_consumer_contact.py  scrape_info.py  scraper_info.py  thread_info.py  user_entity.py  user_status.py
src/services/: content_service.py  forum_service.py  post_service.py  thread_service.py  user_service.py
src/utils/: cli_questionary.py  common.py  fs.py  logger.py  msg_printer.py
src1/: cli_entry.py  node.txt  tieba_auth.py  配置文件的使用.txt
src1/api/: aiotieba_api.py
src1/utils/: fs.py  (+4 more)
(+3 files in other folders)
