[project]
name = "tieba-scraper"
version = "1.3.2"
description = ""
authors = [
    {name = "Sorceress",email = "Sorceresssis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiotieba (>=4.5.3,<5.0.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "questionary (>=2.1.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
